fixed small alignment issues

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -45,6 +45,8 @@ div {
 	left: 0px;
 	top: 100px;
 	background-color: @trpGreen;
+	height: 40px;
+	width: 40px;
 }
 
 .trpContentPanel {
